# Getting-started-with-PyMAPDL

./: .gitignore  README.md  lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  pyproject.toml
