[tool.poetry]
name = "Getting Started with Ansys PyMAPDL"
version = "1.0.0"
description = "Examples in the Getting started with PyMAPDL course."
authors = ["Runfeng Tsui <runfengtsui@yeah.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
ansys-mapdl-core = "^0.68.4"
numpy = "^1.14"
matplotlib = "^3.9.2"
jupyterlab = "^4.2.5"
trame = "^3.6.3"
trame-vtk = "^2.8.10"
trame-vuetify = "^2.7.0"
ipywidgets = "^8.1.5"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
